vtl-prov/docs/configuration/provenance/kubernetes/trifid/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trifid-trevas-provenance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trifid-trevas-provenance
  template:
    metadata:
      labels:
        app: trifid-trevas-provenance
    spec:
      containers:
        - name: trifid
          image: ghcr.io/zazuko/trifid:v5
          imagePullPolicy: IfNotPresent
