vtl-prov/docs/configuration/provenance/kubernetes/trifid/service.yml
apiVersion: v1
kind: Service
metadata:
  name: trifid-trevas-provenance
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 8080
  selector:
    app: trifid-trevas-provenance
